# vibecast

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  main.py  pyproject.toml  release-please-config.json
.claude/: settings.local.json
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml  rust.yml
android/: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  lint.xml  proguard-rules.pro
android/gradle/: libs.versions.toml
castvibe/: __init__.py  __main__.py  _auth.py  _certificate.py  _connection.py  _coordinator.py  _device.py  _discovery.py  _framing.py  _handlers.py  _http.py  _log.py  _namespace.py  _player_server.py  _player_web.py  _server.py  _util.py  player.py  provider.py  receiver.py
castvibe/_models/: __init__.py  _common.py  _connection.py  _discovery.py  _heartbeat.py  _media.py  _multizone.py  _receiver.py  _setup.py
castvibe/_proto/: cast_channel_pb2.py
castvibe/_web/: __init__.py  player.html  player.js
castvibe/providers/: __init__.py  viaplay.py
crates/uniffi-bindgen/: Cargo.toml
crates/uniffi-bindgen/src/: main.rs
crates/vibecast-apps-primevideo/: Cargo.toml
crates/vibecast-apps-primevideo/src/: api.rs  lib.rs  models.rs
crates/vibecast-apps-svtplay/: Cargo.toml
crates/vibecast-apps-svtplay/src/: api.rs  lib.rs  models.rs
crates/vibecast-apps-tv4play/: Cargo.toml
crates/vibecast-apps-tv4play/src/: api.rs  lib.rs  models.rs
crates/vibecast-apps-viaplay/: Cargo.toml
crates/vibecast-apps-viaplay/src/: api.rs  lib.rs  models.rs
crates/vibecast-apps-youtube/: Cargo.toml
crates/vibecast-apps-youtube/src/: lib.rs  lounge.rs  resolver.rs  sponsorblock.rs
crates/vibecast-bridge/: Cargo.toml
crates/vibecast-bridge/assets/: player.html  player.js
crates/vibecast-bridge/src/: bridge.rs  headers.rs  lib.rs  manifest.rs  protocol.rs  proxy.rs  web.rs
crates/vibecast-capture/: Cargo.toml
crates/vibecast-capture/src/: adb.rs  ca.rs  cast_proxy.rs  decode.rs  error.rs  http_mitm.rs  lib.rs  recorder.rs  tls.rs
crates/vibecast-cast/: Cargo.toml
crates/vibecast-cast/src/: connection.rs  error.rs  lib.rs  message.rs  namespace.rs  server.rs  tests.rs
crates/vibecast-cli/: Cargo.toml
crates/vibecast-cli/src/: config.rs  main.rs
crates/vibecast-core/: Cargo.toml
crates/vibecast-core/src/: coordinator.rs  hub.rs  identity.rs  lib.rs  proxy.rs  registry.rs  status.rs  tests.rs
crates/vibecast-discovery/: Cargo.toml
crates/vibecast-discovery/src/: error.rs  eureka.rs  lib.rs  mdns.rs
crates/vibecast-ffi/: Cargo.toml  build.rs
crates/vibecast-ffi/src/: lib.rs
crates/vibecast-messages/: Cargo.toml
crates/vibecast-messages/src/: common.rs  connection.rs  discovery.rs  lib.rs  media.rs  multizone.rs  patch.rs  receiver.rs  setup.rs  tests.rs  util.rs
crates/vibecast-platform/: Cargo.toml
crates/vibecast-platform/src/: config.rs  lib.rs  manager.rs
crates/vibecast-player-api/: Cargo.toml
crates/vibecast-player-api/src/: lib.rs  manifest.rs  player.rs  protocol.rs  proxy.rs
crates/vibecast-primitives-ffi/: Cargo.toml
crates/vibecast-primitives-ffi/src/: lib.rs
crates/vibecast-proto/: Cargo.toml  build.rs
crates/vibecast-proto/src/: framing.rs  lib.rs
crates/vibecast-proto/tests/: framing.rs
crates/vibecast-receiver/: Cargo.toml
crates/vibecast-receiver/src/: lib.rs
crates/vibecast-sdk/: Cargo.toml
crates/vibecast-sdk/src/: capabilities.rs  config.rs  context.rs  error.rs  lib.rs  license.rs  types.rs
crates/vibecast-security/: Cargo.toml
crates/vibecast-security/src/: auth.rs  bundle.rs  error.rs  lib.rs  store.rs  tests.rs  tls.rs
crates/vibecast-settings/: Cargo.toml
crates/vibecast-settings/src/: lib.rs
docker/: release.Dockerfile
docs/: ci-cd.md
kodi/service.vibecast/: README.md  addon.xml  protocol.py  service.py  settings_model.py  settings_ui.py
packaging/homebrew/: vibecast.rb.tmpl
scripts/: _mitm_addon.py  capture_provider.py  compile_proto.py
tests/: conftest.py  test_app.py  test_auth.py  test_certificate.py  test_config.py  test_connection.py  test_coordinator.py  test_device.py  test_discovery.py  test_eureka.py  test_framing.py  test_handlers.py  test_http.py  test_import.py  test_main.py  test_manifest_proxy.py  test_namespace.py  test_player.py  test_player_bridge.py  test_player_server.py  test_proto.py  test_provider.py  test_receiver.py  test_server.py
tests/providers/: test_amazon_prime_provider.py  test_primevideo_provider.py  test_svt_play_provider.py  test_svtplay_provider.py
tests/test_models/: test_base.py  test_connection.py  test_heartbeat.py  test_media.py  test_multizone.py  test_receiver.py  test_setup.py
tools/capture/: README.md  capture.py  mitm_addon.py  pyproject.toml  regenerate-bindings.sh
tools/castreg/: README.md  castreg.py  pyproject.toml
vibecast/: __init__.py  __main__.py  _auth.py  _config.py  _connection.py  _coordinator.py  _device.py  _discovery.py  _eureka.py  _framing.py  _handlers.py  _http.py  _log.py  _player_server.py  _server.py  _util.py  player.py  provider.py  receiver.py
vibecast/_config/: __init__.py  defaults.py  loader.py  models.py  parser.py
vibecast/_discovery/: __init__.py  eureka.py
vibecast/_models/: __init__.py  _base.py  _common.py  _connection.py  _discovery.py  _heartbeat.py  _media.py  _multizone.py  _receiver.py  _setup.py
vibecast/_playback/: __init__.py  coordinator.py  headers.py  manifest_proxy.py  player_bridge.py  player_server.py  player_web.py
vibecast/_proto/: cast_channel_pb2.pyi
vibecast/_runtime/: __init__.py  device.py  handlers.py  receiver_status.py
vibecast/_security/: __init__.py  auth.py  certificate.py  tls.py
vibecast/_transport/: __init__.py  connection.py  server.py
vibecast/_web/: __init__.py  player.html  player.js
vibecast/app/: __init__.py
vibecast/apps/: __init__.py
vibecast/player/: __init__.py
vibecast/providers/: __init__.py
(+79 files in other folders)
