# Rust rewrite of vibecast (see /Users/emil/.claude/plans/fizzy-mixing-donut.md).
# Coexists with the Python tree during migration; Python cutover is the final phase.
[workspace]
resolver = "2"
members = [
    "crates/vibecast-proto",
    "crates/vibecast-security",
    "crates/vibecast-cast",
    "crates/vibecast-discovery",
    "crates/vibecast-messages",
    "crates/vibecast-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

# Protobuf (CastV2 wire) — protox is a pure-Rust compiler so no `protoc` binary is needed.
prost = "0.14"
prost-build = "0.14"
protox = "0.9"

# TLS + certificates (device-auth uses static harvested signatures, so no runtime RSA signing)
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = { version = "1", features = ["std"] }
x509-parser = "0.16"
arc-swap = "1"
md-5 = "0.10"
sha2 = "0.10"
hex = "0.4"

# Discovery: mDNS advertisement + eureka HTTP/HTTPS
mdns-sd = "0.20"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Async stream/sink combinators (sink feature enables SinkExt + Framed::split)
futures-util = { version = "0.3", features = ["sink"] }

# Errors / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"

# Dev / test
proptest = "1"
rcgen = "0.13"
tower = "0.5"

[profile.release]
strip = true
lto = "thin"
