# vibecast: a native Google Cast receiver, organized as a Cargo workspace of
# focused crates (protocol, transport, discovery, bridge, runtime, apps, CLI).
[workspace]
resolver = "2"
members = [
    "crates/vibecast-proto",
    "crates/vibecast-security",
    "crates/vibecast-cast",
    "crates/vibecast-discovery",
    "crates/vibecast-messages",
    "crates/vibecast-bridge",
    "crates/vibecast-sdk",
    "crates/vibecast-apps-svtplay",
    "crates/vibecast-apps-tv4play",
    "crates/vibecast-apps-viaplay",
    "crates/vibecast-apps-primevideo",
    "crates/vibecast-core",
    "crates/vibecast-platform",
    "crates/vibecast-cli",
    "crates/vibecast-ffi",
    "crates/uniffi-bindgen",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# UniFFI 0.32 (vibecast-ffi) sets the workspace floor at 1.87.
rust-version = "1.87"
publish = false
license = "MIT"
repository = "https://github.com/emilsvennesson/vibecast"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

# Protobuf (CastV2 wire) — protox is a pure-Rust compiler so no `protoc` binary is needed.
prost = "0.14"
prost-build = "0.14"
protox = "0.9"

# TLS + certificates (device-auth uses static harvested signatures, so no runtime RSA signing)
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = { version = "1", features = ["std"] }
x509-parser = "0.16"
arc-swap = "1"
md-5 = "0.10"
sha2 = "0.10"
hex = "0.4"

# Shared HTTP types (HeaderMap/HeaderName/HeaderValue) used on proxy boundaries;
# unifies with axum + reqwest header types (all built on the `http` crate).
http = "1"

# Discovery: mDNS advertisement + eureka HTTP/HTTPS
mdns-sd = "0.20"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }

# Player bridge: manifest normalization (mutable XML tree) + URL resolution
xot = "0.31"
url = "2"

# Object-safe async trait methods for the renderer/handler/app SDK traits
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# HTTP client for app API calls, CRL, and license/manifest proxy fetches
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "cookies"] }
uuid = { version = "1", features = ["v4"] }

# Async stream/sink combinators (sink feature enables SinkExt + Framed::split)
futures-util = { version = "0.3", features = ["sink"] }

# Regex for app manifest license-URL extraction
regex = "1"

# Errors / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI argument parsing + config
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# FFI bindings (vibecast-ffi): Kotlin/Swift/... from one Rust facade
uniffi = "0.32"

# Android tracing sink (vibecast-ffi, target_os = "android" only)
tracing-logcat = "0.1"

# Dev / test
proptest = "1"
rcgen = "0.13"
tower = "0.5"

[profile.release]
strip = true
lto = "thin"
