[project]
name = "vibecast"
version = "0.1.0"
description = "Python Google Cast receiver implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11",
    "protobuf>=5.0",
    "zeroconf>=0.140",
    "cryptography>=44.0",
    "httpx>=0.28",
    "aiohttp>=3.11",
    "uritemplate>=4.1",
]

[project.entry-points."vibecast.providers"]
primevideo = "vibecast.providers.primevideo._provider:PrimeVideoProvider"
svtplay = "vibecast.providers.svtplay._provider:SvtPlayProvider"
viaplay = "vibecast.providers.viaplay._provider:ViaplayProvider"

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "deptry>=0.24.0",
    "grpcio-tools>=1.70",
    "Kodistubs>=21.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.15.1",
]

[tool.setuptools.package-data]
vibecast = ["_web/*.html", "_web/*.js"]

[tool.setuptools.packages.find]
include = ["vibecast*"]
exclude = ["kodi*"]

[tool.ruff]
# Generated protobuf files are not linted or formatted.
extend-exclude = ["vibecast/_proto/cast_channel_pb2.py", "vibecast/_proto/cast_channel_pb2.pyi"]

[tool.ruff.lint]
preview = true
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # naming
  "N",
  # flake8-builtins
  "A",
  # flake8-print
  "T",
  # flake8-comprehensions
  "C4",
  # flake8-return
  "RET",
  # flake8-use-pathlib
  "PTH",
  # flake8-type-checking
  "TCH",
  # flake8-pie
  "PIE",
  # Perflint
  "PERF",
  # flake8-unused-arguments
  "ARG",
  # flake8-async
  "ASYNC",
  # tryceratops
  "TRY",
]

# Disable specific rules
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["T201"]

[tool.deptry]
extend_exclude = ["scripts", ".*/tests/", "kodi"]

[tool.deptry.per_rule_ignores]
# These dependencies are used in later issues; added now per project plan.
DEP002 = ["zeroconf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.basedpyright]
typeCheckingMode = "recommended"
pythonVersion = "3.12"
pythonPlatform = "All"
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportAny = "hint"
reportExplicitAny = "hint"
reportMissingTypeStubs = "hint"
reportUnannotatedClassAttribute = "none"
ignore = ["scripts", "kodi"]
# Generated protobuf files have type issues we can't fix.
exclude = [".venv", "scripts", "kodi", "vibecast/_proto/cast_channel_pb2.py", "vibecast/_proto/cast_channel_pb2.pyi"]
venvPath = "."
venv = ".venv"

executionEnvironments = [
  { root = "vibecast/providers/viaplay/tests", reportPrivateUsage = "none", reportUnknownMemberType = "none", extraPaths = ["."] },
  { root = "tests", reportPrivateUsage = "none", extraPaths = ["."] },
  { root = "." },
]
