[package]
name = "vibecast-apps-primevideo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
vibecast-sdk = { path = "../vibecast-sdk" }

async-trait = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
wiremock = "0.6"
