[package]
name = "vibecast-capture"
description = "Developer capture proxy: MITM the CastV2 protocol and the receiver's HTTP/HTTPS egress, logging both to JSONL for reverse-engineering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# CastV2 wire: framing codec + message/deviceauth types.
vibecast-proto = { path = "../vibecast-proto" }
# Harvested cert manifest, deviceauth response builders, rustls server config.
vibecast-security = { path = "../vibecast-security" }
# mDNS advertisement so the sender discovers the proxy as a distinct device.
vibecast-discovery = { path = "../vibecast-discovery", features = ["mdns"] }

# Async runtime + framing/streams.
tokio = { workspace = true, features = ["signal"] }
tokio-util.workspace = true
futures-util.workspace = true

# TLS: server (sender leg + HTTPS MITM) and client (upstream cast leg).
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pki-types.workspace = true

# HTTP MITM: hyper server (downstream, decrypted) + reqwest client (upstream).
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
bytes.workspace = true
# `stream` enables Response::bytes_stream so we can stream bodies through the
# MITM (rather than buffering — which would stall streaming/long-poll responses).
reqwest = { workspace = true, features = ["stream"] }

# On-the-fly leaf certificate minting for the HTTPS MITM, signed by a
# pre-trusted CA. `x509-parser` enables `CertificateParams::from_ca_cert_pem`.
rcgen = { workspace = true, features = ["x509-parser"] }

prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
