[package]
name = "vibecast-cli"
description = "vibecast receiver command-line binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "vibecast"
path = "src/main.rs"

[dependencies]
vibecast-platform = { path = "../vibecast-platform" }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
