[package]
name = "vibecast-core"
description = "Receiver runtime: device hub and platform-namespace handling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
vibecast-proto = { path = "../vibecast-proto" }
vibecast-cast = { path = "../vibecast-cast" }
vibecast-messages = { path = "../vibecast-messages" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
vibecast-security = { path = "../vibecast-security" }
tokio-util.workspace = true
futures-util.workspace = true
