[package]
name = "vibecast-core"
description = "Receiver runtime: device hub and platform-namespace handling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
vibecast-proto = { path = "../vibecast-proto" }
vibecast-cast = { path = "../vibecast-cast" }
vibecast-messages = { path = "../vibecast-messages" }
vibecast-bridge = { path = "../vibecast-bridge" }
vibecast-sdk = { path = "../vibecast-sdk" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
http.workspace = true
uuid.workspace = true

[dev-dependencies]
vibecast-security = { path = "../vibecast-security" }
tokio-util.workspace = true
futures-util.workspace = true
