[package]
name = "vibecast-discovery"
description = "Cast device discovery: mDNS advertisement and eureka HTTP/HTTPS endpoints"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
# The mDNS responder (mdns-sd). Desktop enables it; platforms with native
# discovery (Android NsdManager, iOS NWListener) omit it so mdns-sd is not
# linked. The portable advertisement identity + eureka endpoints are always on.
mdns = ["dep:mdns-sd"]

[dependencies]
vibecast-security = { path = "../vibecast-security" }
tokio.workspace = true
axum.workspace = true
axum-server.workspace = true
rustls.workspace = true
mdns-sd = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
md-5.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tower.workspace = true
rcgen.workspace = true
