[package]
name = "vibecast-platform"
description = "Shared receiver compose/run orchestration consumed by every platform binding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
# Advertise each per-player receiver over mDNS from Rust. Off by default so
# bindings with native discovery (the FFI facade) never link `mdns-sd`; the
# desktop `vibecast-cli` opts in.
mdns = ["vibecast-receiver/mdns"]

[dependencies]
vibecast-cast = { path = "../vibecast-cast" }
vibecast-security = { path = "../vibecast-security" }
vibecast-discovery = { path = "../vibecast-discovery" }
vibecast-bridge = { path = "../vibecast-bridge" }
vibecast-core = { path = "../vibecast-core" }
vibecast-player-api = { path = "../vibecast-player-api" }
vibecast-receiver = { path = "../vibecast-receiver" }
vibecast-sdk = { path = "../vibecast-sdk" }
vibecast-messages = { path = "../vibecast-messages" }
vibecast-apps-svtplay = { path = "../vibecast-apps-svtplay" }
vibecast-apps-tv4play = { path = "../vibecast-apps-tv4play" }
vibecast-apps-viaplay = { path = "../vibecast-apps-viaplay" }
vibecast-apps-primevideo = { path = "../vibecast-apps-primevideo" }

tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
