[package]
name = "vibecast-player-api"
description = "Neutral seam between the generic Cast receiver and a concrete player: wire protocol, player/proxy traits, manifest normalization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
vibecast-messages = { path = "../vibecast-messages" }

http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
xot = { workspace = true }
url = { workspace = true }
