[package]
name = "vibecast-security"
description = "Cast device authentication material and TLS certificate handling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
vibecast-proto = { path = "../vibecast-proto" }
prost.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
x509-parser.workspace = true
arc-swap.workspace = true
md-5.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rcgen.workspace = true
