[package]
name = "vibecast-settings"
description = "Typed settings schemas, snapshots, and persistence-backed service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
